builds, can see whos coming and invited, double segues

--- a/iOSDecalCustomApp/iOSDecalCustomApp/Base.lproj/Main.storyboard
+++ b/iOSDecalCustomApp/iOSDecalCustomApp/Base.lproj/Main.storyboard
@@ -748,16 +748,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="71.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Invitee Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lhB-Vf-uMh">
-                                                    <rect key="frame" x="48" y="25" width="114" height="21"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="114" id="kN3-IK-4ic"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Invitee Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gT1-RJ-BTh">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Invitee Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gT1-RJ-BTh">
                                                     <rect key="frame" x="202" y="25" width="134" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -766,16 +757,10 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="gT1-RJ-BTh" firstAttribute="top" secondItem="fPv-RD-HwA" secondAttribute="topMargin" constant="17" id="Dc8-9d-7zR"/>
-                                                <constraint firstItem="lhB-Vf-uMh" firstAttribute="top" secondItem="fPv-RD-HwA" secondAttribute="topMargin" constant="17" id="QYz-2Q-y5c"/>
-                                                <constraint firstItem="lhB-Vf-uMh" firstAttribute="leading" secondItem="fPv-RD-HwA" secondAttribute="leadingMargin" constant="40" id="ZeX-LS-Ldd"/>
-                                                <constraint firstItem="lhB-Vf-uMh" firstAttribute="baseline" secondItem="gT1-RJ-BTh" secondAttribute="baseline" id="h6i-Uy-2vf"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="gT1-RJ-BTh" secondAttribute="bottom" constant="17.5" id="hhp-7R-XjP"/>
-                                                <constraint firstItem="gT1-RJ-BTh" firstAttribute="leading" secondItem="lhB-Vf-uMh" secondAttribute="trailing" constant="40" id="iMa-4S-p7f"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="lhB-Vf-uMh" secondAttribute="bottom" constant="17.5" id="xMB-F8-C38"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="InviteeName" destination="lhB-Vf-uMh" id="fdW-qQ-lcs"/>
                                             <outlet property="InviteeUsername" destination="gT1-RJ-BTh" id="bvh-Kj-vge"/>
                                         </connections>
                                     </tableViewCell>
@@ -786,7 +771,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Invite"/>
                                 <connections>
-                                    <action selector="Invite:" destination="vin-om-kOT" eventType="touchUpInside" id="8UM-cf-ssP"/>
                                     <action selector="invitePressed:" destination="vin-om-kOT" eventType="touchUpInside" id="QVE-o0-dcV"/>
                                     <segue destination="szn-T2-7xl" kind="unwind" identifier="unwindToMyEvent" unwindAction="unwindToMyEventWithSegue:" id="vZs-yg-yib"/>
                                 </connections>
@@ -818,7 +802,6 @@
                     </view>
                     <connections>
                         <outlet property="ChooseInvitesTableView" destination="2js-MP-38I" id="ycF-E8-7Qp"/>
-                        <outlet property="InviteButton" destination="dS8-sJ-tWd" id="8bN-cq-oXb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jba-gs-gGE" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -842,7 +825,7 @@
                                 <rect key="frame" x="0.0" y="30" width="375" height="637"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="56L-1e-f1b" customClass="WhosComingTableViewCell" customModule="iOSDecalCustomApp" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="whosComingTableViewCell" id="56L-1e-f1b" customClass="WhosComingTableViewCell" customModule="iOSDecalCustomApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="56L-1e-f1b" id="zLv-ap-t5Y">
